first commit to mohit

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     <div id="collapseOne" class="accordion-collapse collapse " data-bs-parent="#accordionExample">
                       <ul class="menu-iner-1">
                         <li>
-                          <a href="">Index 01</a>
+                          <a href="index.html">Index 01</a>
                         </li>
                         <li>
                           <a href="">Index 02</a>
@@ -245,7 +245,7 @@
                     <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                       <ul class="menu-iner-1">
                         <li>
-                          <a href="">List Layout</a>
+                          <a href="carlist.html">List Layout</a>
                         </li>
                         <li>
                           <a href="">Grid Layout</a>
@@ -270,7 +270,7 @@
                     <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                       <ul class="menu-iner-1">
                         <li>
-                          <a href="">About Us</a>
+                          <a href="pricingtbl.html">Pricing Tables</a>
                         </li>
                         <li>
                           <a href="">Agent</a>
@@ -282,7 +282,7 @@
                           <a href="">Car Compare</a>
                         </li>
                         <li>
-                          <a href="">Pricing Tables</a>
+                          <a href="">About Us</a>
                         </li>
                         <li>
                           <a href="">Gallery</a>
@@ -327,7 +327,7 @@
                     <div id="collapseFor" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                       <ul class="menu-iner-1">
                         <li>
-                          <a href="">Blog Post</a>
+                          <a href="blog.html">Blog Post</a>
                         </li>
                         <li>
                           <a href="">Blog Sidebar</a>
@@ -351,7 +351,7 @@
                     <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                       <ul class="menu-iner-1">
                         <li>
-                          <a href="">Shop List</a>
+                          <a href="shoplist.html">Shop List</a>
                         </li>
                         <li>
                           <a href="">Shop Cart</a>
@@ -370,10 +370,17 @@
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                      data-bs-target="#collapseFive" aria-expanded="true" aria-controls="collapseOne">
+                      data-bs-target="#collapseSix" aria-expanded="true" aria-controls="collapseOne">
                       Contact
                     </button>
                   </h2>
+                  <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                    <ul class="menu-iner-1">
+                      <li>
+                        <a href="contact.html">Contact</a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
 
                 <a href="#" class="nav-link text-black"><i class="fa-solid fa-magnifying-glass mt-3"></i></a>
