--- a/contact.html
+++ b/contact.html
@@ -212,7 +212,7 @@
                                             data-bs-parent="#accordionExample">
                                             <ul class="menu-iner-1">
                                                 <li>
-                                                    <a href="">Index 01</a>
+                                                    <a href="index.html">Index 01</a>
                                                 </li>
                                                 <li>
                                                     <a href="">Index 02</a>
@@ -247,7 +247,7 @@
                                             data-bs-parent="#accordionExample">
                                             <ul class="menu-iner-1">
                                                 <li>
-                                                    <a href="">List Layout</a>
+                                                    <a href="carlist.html">List Layout</a>
                                                 </li>
                                                 <li>
                                                     <a href="">Grid Layout</a>
@@ -274,7 +274,7 @@
                                             data-bs-parent="#accordionExample">
                                             <ul class="menu-iner-1">
                                                 <li>
-                                                    <a href="">About Us</a>
+                                                    <a href="pricingtbl.html">Pricing Tables</a>
                                                 </li>
                                                 <li>
                                                     <a href="">Agent</a>
@@ -286,7 +286,7 @@
                                                     <a href="">Car Compare</a>
                                                 </li>
                                                 <li>
-                                                    <a href="">Pricing Tables</a>
+                                                    <a href="">About Us</a>
                                                 </li>
                                                 <li>
                                                     <a href="">Gallery</a>
@@ -333,7 +333,7 @@
                                             data-bs-parent="#accordionExample">
                                             <ul class="menu-iner-1">
                                                 <li>
-                                                    <a href="">Blog Post</a>
+                                                    <a href="blog.html">Blog Post</a>
                                                 </li>
                                                 <li>
                                                     <a href="">Blog Sidebar</a>
@@ -359,7 +359,7 @@
                                             data-bs-parent="#accordionExample">
                                             <ul class="menu-iner-1">
                                                 <li>
-                                                    <a href="">Shop List</a>
+                                                    <a href="shoplist.html">Shop List</a>
                                                 </li>
                                                 <li>
                                                     <a href="">Shop Cart</a>
@@ -378,11 +378,19 @@
                                 <div class="accordion-item">
                                     <h2 class="accordion-header">
                                         <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                            data-bs-target="#collapseFive" aria-expanded="true"
+                                            data-bs-target="#collapseSix" aria-expanded="true"
                                             aria-controls="collapseOne">
                                             Contact
                                         </button>
                                     </h2>
+                                    <div id="collapseSix" class="accordion-collapse collapse"
+                                        data-bs-parent="#accordionExample">
+                                        <ul class="menu-iner-1">
+                                            <li>
+                                                <a href="contact.html">Contact Us</a>
+                                            </li>
+                                        </ul>
+                                    </div>
                                 </div>
 
                                 <a href="#" class="nav-link text-black"><i
@@ -435,10 +443,10 @@
     <div class="sub-banner">
         <div class="container area">
             <div class="breadcrumb-areas">
-                <h1 class="text-white">Pricing Tables</h1>
+                <h1 class="text-white">Contact Us</h1>
                 <ul class="breadcrumbs text-white p-0">
                     <li><a href="index.html">Home</a></li>
-                    <li><i class="fa-solid fa-caret-right mx-2"></i>Pricing Tables</li>
+                    <li><i class="fa-solid fa-caret-right mx-2"></i>Contact Us</li>
                 </ul>
             </div>
         </div>
@@ -588,12 +596,15 @@
 
     <div class="section my-0">
         <div class="contact-map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d238133.18800900166!2d72.65748353239132!3d21.159120355102836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be04e59411d1563%3A0xfe4558290938b042!2sSurat%2C%20Gujarat!5e0!3m2!1sen!2sin!4v1716638097699!5m2!1sen!2sin" width="100%" height="400" style="border:0; margin-bottom: -6px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d238133.18800900166!2d72.65748353239132!3d21.159120355102836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be04e59411d1563%3A0xfe4558290938b042!2sSurat%2C%20Gujarat!5e0!3m2!1sen!2sin!4v1716638097699!5m2!1sen!2sin"
+                width="100%" height="400" style="border:0; margin-bottom: -6px;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
 
     <!-- Google Map End -->
-    
+
     <!-- Our Footer Start -->
 
     <footer class="footer">
