--- a/shoplist.html
+++ b/shoplist.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="css/media.css">
 
     <!-- Favicon Icon -->
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
 </head>
 
@@ -212,7 +212,7 @@
                                             data-bs-parent="#accordionExample">
                                             <ul class="menu-iner-1">
                                                 <li>
-                                                    <a href="">Index 01</a>
+                                                    <a href="index.html">Index 01</a>
                                                 </li>
                                                 <li>
                                                     <a href="">Index 02</a>
@@ -247,7 +247,7 @@
                                             data-bs-parent="#accordionExample">
                                             <ul class="menu-iner-1">
                                                 <li>
-                                                    <a href="">List Layout</a>
+                                                    <a href="carlist.html">List Layout</a>
                                                 </li>
                                                 <li>
                                                     <a href="">Grid Layout</a>
@@ -274,7 +274,7 @@
                                             data-bs-parent="#accordionExample">
                                             <ul class="menu-iner-1">
                                                 <li>
-                                                    <a href="">About Us</a>
+                                                    <a href="pricingtbl.html">Pricing Tables</a>
                                                 </li>
                                                 <li>
                                                     <a href="">Agent</a>
@@ -286,7 +286,7 @@
                                                     <a href="">Car Compare</a>
                                                 </li>
                                                 <li>
-                                                    <a href="">Pricing Tables</a>
+                                                    <a href="">About Us</a>
                                                 </li>
                                                 <li>
                                                     <a href="">Gallery</a>
@@ -333,7 +333,7 @@
                                             data-bs-parent="#accordionExample">
                                             <ul class="menu-iner-1">
                                                 <li>
-                                                    <a href="">Blog Post</a>
+                                                    <a href="blog.html">Blog Post</a>
                                                 </li>
                                                 <li>
                                                     <a href="">Blog Sidebar</a>
@@ -359,7 +359,7 @@
                                             data-bs-parent="#accordionExample">
                                             <ul class="menu-iner-1">
                                                 <li>
-                                                    <a href="">Shop List</a>
+                                                    <a href="shoplist.html">Shop List</a>
                                                 </li>
                                                 <li>
                                                     <a href="">Shop Cart</a>
@@ -378,11 +378,19 @@
                                 <div class="accordion-item">
                                     <h2 class="accordion-header">
                                         <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                            data-bs-target="#collapseFive" aria-expanded="true"
+                                            data-bs-target="#collapseSix" aria-expanded="true"
                                             aria-controls="collapseOne">
                                             Contact
                                         </button>
                                     </h2>
+                                    <div id="collapseSix" class="accordion-collapse collapse"
+                                        data-bs-parent="#accordionExample">
+                                        <ul class="menu-iner-1">
+                                            <li>
+                                                <a href="contact.html">Contact Us</a>
+                                            </li>
+                                        </ul>
+                                    </div>
                                 </div>
 
                                 <a href="#" class="nav-link text-black"><i
@@ -857,9 +865,9 @@
 
     <!-- Our Footer End -->
 
-     <!----------------- Back To Top Start----------------->
+    <!----------------- Back To Top Start----------------->
 
-     <div class="fixed">
+    <div class="fixed">
         <a href="#"> <i class="fa-solid fa-angle-up"></i> </a>
     </div>
     <!----------------- Back To Top End----------------->
@@ -877,9 +885,9 @@
 
 
     <!----------------------Toggle-------------------------------->
-    
+
     <script>
-        
+
         $(document).ready(function () {
             $('.mo_main_menu, .mo_in_menu').hide()
 
